--- a/gradle.properties
+++ b/gradle.properties
@@ -3,6 +3,9 @@ org.gradle.jvmargs=-Xmx1G
 org.gradle.parallel=true
 
 # Publishing
+owners = Ladysnake
+display_name = Effective
+license_header = ARR
 modrinth_id = effective
 
 # Fabric Properties
