--- a/build.gradle
+++ b/build.gradle
@@ -5,6 +5,7 @@ plugins {
 }
 
 chenille {
+	javaVersion = 21
 	configurePublishing {
 		withGithubRelease()
 		withModrinthRelease()
@@ -119,7 +120,7 @@ processResources {
 }
 
 tasks.withType(JavaCompile).configureEach {
-	it.options.release = 17
+	it.options.release = 21
 }
 
 java {
