Redo all ambience to be more dynamic, split ambience config into multiple sliders

--- a/gradle.properties
+++ b/gradle.properties
@@ -6,7 +6,9 @@ org.gradle.parallel=true
 owners = Ladysnake
 display_name = Effective
 license_header = ARR
-modrinth_id = effective
+modrinth_id = pcPXJeZi
+curseforge_versions = 1.20.1
+release_type = release
 
 # Fabric Properties
 # check these on https://fabricmc.net/develop
