--- a/build.gradle
+++ b/build.gradle
@@ -4,6 +4,13 @@ plugins {
 	id("io.github.ladysnake.chenille") version "0.13.1"
 }
 
+version = project.mod_version;
+group = project.maven_group;
+
+base {
+	archivesName = project.archives_base_name
+}
+
 chenille {
 	configurePublishing {
 		withGithubRelease()
@@ -11,11 +18,29 @@ chenille {
 	}
 }
 
-version = project.mod_version
-group = project.maven_group
+modrinth {
+	dependencies {
+		required.project "fabric-api"
+		embedded.project "cardinal-components-api"
+		embedded.project "midnightlib"
+		embedded.project "lodestonelib"
+		embedded.project "satin-api"
+	}
+	syncBodyFrom = rootProject.file("README.md").text
+}
 
-base {
-	archivesName = project.archives_base_name
+loom {
+	accessWidenerPath = file("src/client/resources/effective.accesswidener")
+
+	splitEnvironmentSourceSets()
+
+	mods {
+		"effective" {
+			sourceSet sourceSets.main
+			sourceSet sourceSets.client
+		}
+	}
+
 }
 
 repositories {
@@ -45,20 +70,6 @@ repositories {
 			includeGroup "com.jamieswhiteshirt"
 		}
 	}
-}
-
-loom {
-	accessWidenerPath = file("src/client/resources/effective.accesswidener")
-
-	splitEnvironmentSourceSets()
-
-	mods {
-		"effective" {
-			sourceSet sourceSets.main
-			sourceSet sourceSets.client
-		}
-	}
-
 }
 
 dependencies {
@@ -123,9 +134,6 @@ tasks.withType(JavaCompile).configureEach {
 }
 
 java {
-	// Loom will automatically attach sourcesJar to a RemapSourcesJar task and to the "build" task
-	// if it is present.
-	// If you remove this line, sources will not be generated.
 	withSourcesJar()
 
 	sourceCompatibility = JavaVersion.VERSION_21
