--- a/gradle.properties
+++ b/gradle.properties
@@ -7,8 +7,11 @@ owners = Ladysnake
 display_name = Effective
 license_header = ARR
 modrinth_id = pcPXJeZi
-curseforge_versions = 1.20.1
 release_type = release
+mr_requirements = fabric-api
+mr_embeddeds = lodestonelib ; midnightlib ; satin-api ; cardinal-components-api
+mr_optionals = sodium ; iris
+
 
 # Fabric Properties
 # check these on https://fabricmc.net/develop
@@ -17,7 +20,7 @@ yarn_mappings=1.20.1+build.10
 loader_version=0.16.5
 
 # Mod Properties
-mod_version=2.3.1
+mod_version=2.3.1-1.20.1
 maven_group=ladysnake
 archives_base_name=effective
 
