--- a/build.gradle
+++ b/build.gradle
@@ -111,7 +111,7 @@ dependencies {
 	implementation("io.github.douira:glsl-transformer:${project.glslTransformer_version}")
 }
 
-processResources {
+processClientResources {
 	inputs.property "version", project.version
 
 	filesMatching("fabric.mod.json") {
