--- a/gradle.properties
+++ b/gradle.properties
@@ -21,7 +21,7 @@ loader_version=0.16.5
 
 # Mod Properties
 mod_version=2.3.2-1.20.1
-maven_group=ladysnake
+maven_group=org.ladysnake
 archives_base_name=effective
 
 # Dependencies
